Fix dark mode issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,8 +23,14 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+html {
+  color-scheme: dark;
+}
+
 body {
   overflow-x: hidden;
+  color: white;
+  background: #171717;
 }
 
 a {
@@ -34,14 +40,4 @@ a {
 
 * {
   box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: #171717;
-  }
 }
